Button and alternating

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="hero-subheading">
                     “Easily integrate Telecom with the tools you already use to save time and improve team performance”.
                 </p>
-                <button class="btn-primary">Request a Demo</button>
+                <button class="btnn-primary">Request a Demo</button>
             </div>
             <div class="hero-right">
                 <img src="Assets\image.png" alt="Tool integrations diagram" />
@@ -71,8 +71,11 @@
             </div>
         </div>
 
-    <div class="showcase-item reverse">
+    <div class="showcase-item">
       <div class="showcase-container">
+        <div class="showcase-visual">
+          <img src="Assets\int2.png" alt="Integration diagram 2" />
+        </div>
         <div class="showcase-text">
           <h2 class="showcase-title">Access all your info from a single platform</h2>
           <p class="showcase-description">
@@ -80,9 +83,6 @@
             accessible from one interface.
           </p>
           <button class="btn-primary">Request a Demo</button>
-        </div>
-        <div class="showcase-visual">
-          <img src="Assets\int2.png" alt="Integration diagram 2" />
         </div>
       </div>
     </div>
