--- a/index.html
+++ b/index.html
@@ -104,14 +104,262 @@
   </section>
 
   <section class="integration-grid" id="features">
-    <div class="grid-container">
-      <div class="grid-header">
-        <h2 class="grid-title">Explore our full range of integrations</h2>
-        <p class="grid-description">
-          Automate leads, sync data, and keep your team aligned—connect your tools in a few clicks!
-        </p>
+  <div class="grid-container">
+    <div class="grid-header">
+      <h2 class="grid-title">Explore our full range of integrations</h2>
+      <p class="grid-description">
+        Automate leads, sync data, and keep your team aligned—connect your tools in a few clicks!
+      </p>
+    </div>
+    
+    <div class="grid">
+      <!-- Repeat this card block for each integration -->
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Facebook.png" alt="Facebook logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Facebook</h3>
+          <p>Auto-capture lead ad submissions with source tagging</p>
+        </div>
       </div>
-      <div class="grid" id="integrationGrid"></div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Sheets.png" alt="Google Sheets logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Google Sheets</h3>
+          <p>Sync lead data or update fields in bulk</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Razorpay.png" alt="Razorpay logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Razorpay</h3>
+          <p>Get real-time payment status updates inside lead profiles</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/CallerDesk.png" alt="CallerDesk logo" />
+        </div>
+        <div class="integration-info">
+          <h3>CallerDesk</h3>
+          <p>Log call activity, duration and recordings instantly</p>
+        </div>
+      </div>
+
+      <!-- 2nd Row -->
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Maqsam.png" alt="Maqsam logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Maqsam</h3>
+          <p>Record calls and add conversation logs to lead timelines</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Knowlarity.png" alt="Knowlarity logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Knowlarity</h3>
+          <p>Track outbound/inbound calls with agent-wise logs</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/Mcube.png" alt="Mcube logo" />
+        </div>
+        <div class="integration-info">
+          <h3>Mcube</h3>
+          <p>Auto-log calls, missed follow-ups, and call outcomes</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp logo" />
+        </div>
+        <div class="integration-info">
+          <h3>WhatsApp</h3>
+          <p>Send and receive WhatsApp messages directly into the software</p>
+        </div>
+      </div>
+
+      <!-- 3rd Row -->
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Cloud API logo" />
+        </div>
+        <div class="integration-info">
+          <h3>WhatsApp Cloud API</h3>
+          <p>Automate message flows based on lead activity</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Chat Widget logo" />
+        </div>
+        <div class="integration-info">
+          <h3>WhatsApp Chat Widget</h3>
+          <p>Directly bring website leads into your WhatsApp Chat</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/MagicBricks.png" alt="MagicBricks logo" />
+        </div>
+        <div class="integration-info">
+          <h3>MagicBricks</h3>
+          <p>Log property interest from listings and follow up in real time</p>
+        </div>
+      </div>
+
+      <div class="integration-card">
+        <div class="hexagon">
+          <img src="Assets/Integrations/99Acres.png" alt="99acres logo" />
+        </div>
+        <div class="integration-info">
+          <h3>99acres</h3>
+          <p>Collect buyer/tenant enquiries with location and budget filters</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 4th Row -->
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Housing.png" alt="Housing.com logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Housing.com</h3>
+    <p>Get buyer and renter leads with verified contact info</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/JustDial.png" alt="Just Dial logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Just Dial</h3>
+    <p>Capture enquiry details instantly and assign them to your team</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/IndiaMart.png" alt="IndiaMart logo" />
+  </div>
+  <div class="integration-info">
+    <h3>IndiaMart</h3>
+    <p>Pull business enquiries with product-level details</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/sulekha.png" alt="Sulekha logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Sulekha</h3>
+    <p>Capture leads with service category and location data</p>
+  </div>
+</div>
+
+<!-- 5th Row -->
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/shiksha.png" alt="Siksha logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Siksha</h3>
+    <p>Track student leads across enquiry to enrolment</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/TradeIndia.png" alt="Trade India logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Trade India</h3>
+    <p>Capture and prioritise trade enquiries by category</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Meet.png" alt="Google Meet logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Google Meet</h3>
+    <p>Schedule and track meeting links under each lead</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Wordpress.png" alt="WordPress logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Wordpress</h3>
+    <p>Convert form submissions into actionable leads</p>
+  </div>
+</div>
+
+<!-- 6th Row -->
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/WebAPI.png" alt="Website/API logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Website/API</h3>
+    <p>Push lead data from any form or platform</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Shopify.png" alt="Shopify logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Shopify</h3>
+    <p>Track new orders and customer info for timely follow-ups</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Woo.png" alt="WooCommerce logo" />
+  </div>
+  <div class="integration-info">
+    <h3>WooCommerce</h3>
+    <p>Auto-import order details and manage post-sale engagement</p>
+  </div>
+</div>
+
+<div class="integration-card">
+  <div class="hexagon">
+    <img src="Assets/Integrations/Embedded Apps.png" alt="Embedded Apps logo" />
+  </div>
+  <div class="integration-info">
+    <h3>Embedded Apps</h3>
+    <p>Auto-import order details and manage post-sale engagement</p>
+  </div>
+</div>
+
       <div class="grid-footer">
         <button class="btn-primary">Request a Demo</button>
       </div>
