Font and Section color shade done

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-    <div class="showcase-item">
+    <div class="showcase-item" style="background-color: rgb(250, 240, 255); padding: 3rem;">
       <div class="showcase-container">
         <div class="showcase-visual">
           <img src="Assets\int2.png" alt="Integration diagram 2" />
