--- a/index.html
+++ b/index.html
@@ -11,37 +11,13 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="header">
-    <div class="header-container">
-      <button class="menu-btn" id="menuBtn">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </button>
-      <div class="logo">
-        <h1>Telecrm</h1>
-      </div>
-      <nav class="nav" id="nav">
-        <ul class="nav-list">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#integrations">Integrations</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="header-actions">
-        <button class="btn-demo">Request a Demo</button>
-      </div>
-    </div>
-  </header>
 
   <section class="hero" id="home">
         <div class="hero-container">
             <div class="hero-left">
                 <h1 class="hero-heading">Connect tools, simplify your sales!</h1>
                 <p class="hero-subheading">
-                    “Easily integrate Telecom with the tools you already use to save time and improve team performance”.
+                    “Easily integrate Telecrm with the tools you already use to save time and improve team performance”.
                 </p>
                 <button class="btnn-primary">Request a Demo</button>
             </div>
