--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Telecrm Business Integrations Platform</title>
-  <meta name="description" content=Easily integrate Telecrm with the tools you already use to save time and improve team performance />
+  <meta name="description" content="Easily integrate Telecrm with the tools you already use to save time and improve team performance" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
             <div class="hero-left">
                 <h1 class="hero-heading">Connect tools, simplify your sales!</h1>
                 <p class="hero-subheading">
-                    “Easily integrate Telecrm with the tools you already use to save time and improve team performance”.
+                    Easily integrate Telecrm with the tools you already use to save time and improve team performance.
                 </p>
                 <button class="btnn-primary">Request a Demo</button>
             </div>
