Background color of web page, Integration grid changed. Icon size increased. Divider element increased. Left alignment of info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-    <div class="showcase-item" style="background-color: rgb(250, 240, 255); padding: 3rem;">
+    <div class="showcase-item" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;">
       <div class="showcase-container">
         <div class="showcase-visual">
           <img src="Assets\int2.png" alt="Integration diagram 2" />
@@ -79,12 +79,12 @@
     </div>
   </section>
 
-  <section class="integration-grid" id="features">
+  <section class="integration-grid" id="features" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;>
   <div class="grid-container">
     <div class="grid-header">
       <h2 class="grid-title">Explore our full range of integrations</h2>
       <p class="grid-description">
-        Automate leads, sync data, and keep your team aligned—connect your tools in a few clicks!
+        Integrations makes it easy to automate tasks, sync data and keep your team aligned.With Telecrm, you can connect your existing tools in just a few clicks. Our extensive list 
       </p>
     </div>
     
