added hexagon wrapper for drop shadow

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <section class="integration-grid" id="features" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;>
+  <section class="integration-grid" id="features" style="background-color: rgb(253, 247, 255); padding: 3rem; max-width: 100%;">
   <div class="grid-container">
     <div class="grid-header">
       <h2 class="grid-title">Explore our full range of integrations</h2>
@@ -90,8 +90,10 @@
     
     <div class="grid">
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Facebook.png" alt="Facebook logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Facebook.png" alt="Facebook logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -101,8 +103,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Sheets.png" alt="Google Sheets logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Sheets.png" alt="Google Sheets logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -112,11 +116,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Razorpay.png" alt="Razorpay logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Razorpay.png" alt="Razorpay logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Razorpay</h3>
           <p>Get real-time payment status updates inside lead profiles</p>
@@ -124,11 +129,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/CallerDesk.png" alt="CallerDesk logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/CallerDesk.png" alt="CallerDesk logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>CallerDesk</h3>
           <p>Log call activity, duration and recordings instantly</p>
@@ -137,11 +143,12 @@
 
       <!-- 2nd Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Maqsam.png" alt="Maqsam logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Maqsam.png" alt="Maqsam logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Maqsam</h3>
           <p>Record calls and add conversation logs to lead timelines</p>
@@ -149,11 +156,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Knowlarity.png" alt="Knowlarity logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Knowlarity.png" alt="Knowlarity logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Knowlarity</h3>
           <p>Track outbound/inbound calls with agent-wise logs</p>
@@ -161,11 +169,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Mcube.png" alt="Mcube logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Mcube.png" alt="Mcube logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>Mcube</h3>
           <p>Auto-log calls, missed follow-ups, and call outcomes</p>
@@ -173,11 +182,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>WhatsApp</h3>
           <p>Send and receive WhatsApp messages directly into the software</p>
@@ -186,8 +196,10 @@
 
       <!-- 3rd Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Cloud API logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Cloud API logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -197,11 +209,12 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Chat Widget logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/whatsapp.png" alt="WhatsApp Chat Widget logo" />
+          </div>
         </div>
         <div class="divider"></div>
-
         <div class="integration-info">
           <h3>WhatsApp Chat Widget</h3>
           <p>Directly bring website leads into your WhatsApp Chat</p>
@@ -209,8 +222,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/MagicBricks.png" alt="MagicBricks logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/MagicBricks.png" alt="MagicBricks logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -220,8 +235,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/99Acres.png" alt="99acres logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/99Acres.png" alt="99acres logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -232,8 +249,10 @@
 
       <!-- 4th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Housing.png" alt="Housing.com logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Housing.png" alt="Housing.com logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -243,8 +262,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/JustDial.png" alt="Just Dial logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/JustDial.png" alt="Just Dial logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -254,8 +275,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/IndiaMart.png" alt="IndiaMart logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/IndiaMart.png" alt="IndiaMart logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -265,8 +288,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/sulekha.png" alt="Sulekha logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/sulekha.png" alt="Sulekha logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -277,8 +302,10 @@
 
       <!-- 5th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/shiksha.png" alt="Siksha logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/shiksha.png" alt="Siksha logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -288,8 +315,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/TradeIndia.png" alt="Trade India logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/TradeIndia.png" alt="Trade India logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -299,8 +328,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Meet.png" alt="Google Meet logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Meet.png" alt="Google Meet logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -310,8 +341,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Wordpress.png" alt="WordPress logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Wordpress.png" alt="WordPress logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -322,8 +355,10 @@
 
       <!-- 6th Row -->
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/WebAPI.png" alt="Website/API logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/WebAPI.png" alt="Website/API logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -333,8 +368,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Shopify.png" alt="Shopify logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Shopify.png" alt="Shopify logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -344,8 +381,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Woo.png" alt="WooCommerce logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Woo.png" alt="WooCommerce logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="integration-info">
@@ -355,8 +394,10 @@
       </div>
 
       <div class="integration-card">
-        <div class="hexagon">
-          <img src="Assets/Integrations/Embedded Apps.png" alt="Embedded Apps logo" />
+        <div class="hexagon-wrapper">
+          <div class="hexagon">
+            <img src="Assets/Integrations/Embedded Apps.png" alt="Embedded Apps logo" />
+          </div>
         </div>
         <div class="divider"></div>
         <div class="divider"></div>
